[package]
name = "kasaki"
version = "0.1.0"
authors = ["Nullpinter"]
license = "MPL-2.0"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kakasi = "0.1.0"
neon = "1.1"
